tests/fixtures/valid/arithmetic_precedence.c
int main() {
    int a = 2 + 3 * 4;
    int b = (2 + 3) * 4;
    int c = -a + b % 6;
    return a + b + c;
}
