tests/fixtures/invalid/function_pointer_declaration.c
int (*callback)(int);

int main(void) {
    return 0;
}
